--- a/src/resources/sass/_variables.scss
+++ b/src/resources/sass/_variables.scss
@@ -1,3 +1,18 @@
+$points: (
+    st: 320,
+    xs: 375,
+    psw: 412,
+    sm: 480,
+    ms: 640,
+    md: 798,
+    def: 1024,
+    lg: 1280,
+    xl: 1366,
+    mg: 1440,
+    hd: 1720,
+    dt: 1980
+);
+
 // Body
 $body-bg: #f8fafc;
 
